# OhMyCopy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: auto-test.md  clients-example.json  config-example.json  开发文档.md  文档评审报告.md
examples/: clip_probe.rs
languages/: en_us.lang  zh_cn.lang
scripts/: package_release.ps1  run_auto_tests.ps1  vm_clipboard_smoke.ps1  vm_debug_focus.py  vm_debug_pair.py  vm_debug_reverse.py  vm_debug_reverse2.py  vm_debug_reverse3.py  vm_diag.py  vm_ssh_smoke.py  vm_start_and_probe.py  vm_start_interactive.py
src/: app.rs  audit.rs  auth.rs  autostart.rs  clients.rs  clipboard.rs  config.rs  console_win.rs  engine.rs  history.rs  i18n.rs  icon.rs  inbox.rs  lib.rs  main.rs  protocol.rs  tray.rs
src/net/: discover.rs  mod.rs  peer.rs  tcp.rs
src/ui/: fonts.rs  mod.rs  theme.rs
tests/: e2e_sync.rs  hub_pair_e2e.rs  protocol_sync.rs  settings_and_clients.rs
