[package]
name = "ohmycopy"
version = "0.1.35"
edition = "2021"
description = "Lightweight LAN clipboard sync for Windows and Linux"
license = "MIT"
readme = "README.md"
repository = "https://github.com/local/OhMyCopy"
keywords = ["clipboard", "sync", "lan", "p2p"]
categories = ["network-programming", "gui"]

[dependencies]
anyhow = "1"
arc-swap = "1"
argon2 = "0.5"
base64 = "0.22"
blake3 = "1"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
directories = "5"
# glow = OpenGL; wgpu = DX12/Vulkan/WARP (works on many machines without discrete GPU / OpenGL 2.0)
eframe = { version = "0.31", default-features = true, features = ["default_fonts", "glow", "wgpu"] }
egui = "0.31"
parking_lot = "0.12"
postcard = { version = "1", features = ["alloc"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
toml = "0.8" # legacy config.toml migration only
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Clipboard
arboard = "3"

# History
rusqlite = { version = "0.32", features = ["bundled"] }

# System tray (close-to-tray)
tray-icon = "0.19"
if-addrs = "0.13"
socket2 = "0.6.5"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
panic = "abort"

[dev-dependencies]
tempfile = "3"

# Windows registry for login autostart (no reg.exe console flash)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# Windows .exe icon / version resource
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
